# bookstore

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  env-example  manage.py  pyproject.toml
.github/workflows/: ci.yaml
authors/: admin.py  models.py  serializers.py  urls.py  views.py
authors/migrations/: 0001_initial.py  0002_alter_author_name.py
authors/tests/: test_models.py  test_views.py
bookStore/: __init__.py  base_models.py  celery.py  tasks.py  urls.py
bookStore/settings/: __init__.py  base.py  dev.py  prod.py
books/: admin.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_book_title.py
books/tests/: test_models.py  test_views.py
genres/: admin.py  models.py  serializers.py  urls.py  views.py
genres/migrations/: 0001_initial.py  0002_alter_genre_name.py
genres/tests/: test_views.py
languages/: admin.py  models.py  serializers.py  urls.py  views.py
languages/migrations/: 0001_initial.py  0002_alter_language_name.py
languages/tests/: test_views.py
libs/dropbox/: get_token.py
libs/tests/: test_dropbox.py
publishers/: admin.py  models.py  serializers.py  urls.py  views.py
publishers/migrations/: 0001_initial.py  0002_alter_publisher_name.py
publishers/tests/: test_views.py
users/: serializers.py  urls.py  views.py
users/tests/: test_view.py
utils/: custom_pagination.py
utils/management/commands/: genkey.py
